# gitco

./: .codecov.yml  .conventional-changelog.json  .gitignore  .pre-commit-config.yaml  .yamllint  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  gitco-config.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/security/: config.yml
.github/workflows/: ci.yml  pr-checks.yml  pre-upload-test.yml  pypi-publish.yml  release.yml  test-ci.yml
docs/: QA.md  cli.md  configuration.md  examples.md  faq.md  features.md  installation.md  quick-start.md  releases.md  troubleshooting.md  tutorials.md  usage.md  workflows.md
docs/cli/: backup.md  config.md  contributions.md  core.md  cost.md  github.md  upstream.md
scripts/: build-package.sh  dry-run-ci.sh  generate-changelog.sh  pre-upload-validation.sh  simulate-github-actions.sh  validate-workflows.sh
src/gitco/: __init__.py  activity_dashboard.py  analyzer.py  backup.py  cli.py  config.py  contribution_tracker.py  custom_endpoints.py  detector.py  discovery.py  exporter.py  git_ops.py  github_client.py  health_metrics.py  utils.py
src/gitco/cli/: __init__.py  backup.py  config.py  contributions.py  core.py  cost.py  github.py  upstream.py
src/gitco/libs/: __init__.py  activity_dashboard.py  analyzer.py  backup.py  config.py  contribution_tracker.py  custom_endpoints.py  detector.py  discovery.py  exporter.py  git_ops.py  github_client.py  health_metrics.py
src/gitco/patterns/: __init__.py  constants.py
src/gitco/prompts/: __init__.py  templates.py
src/gitco/templates/: __init__.py  shell_completion.py
src/gitco/utils/: __init__.py  common.py  completion.py  cost_optimizer.py  exception.py  logging.py  prompts.py  rate_limiter.py  retry.py
tests/: __init__.py  conftest.py  test_activity_dashboard.py  test_analyzer.py  test_backup.py  test_cli.py  test_config.py  test_contribution_tracker.py  test_custom_endpoints.py  test_detector.py  test_discovery.py  test_exporter.py  test_git_ops.py  test_github_client.py  test_health_metrics.py  test_imports.py  test_utils.py
tests/fixtures/: __init__.py  analyzers.py  common.py  detectors.py  repositories.py
tests/patterns/: __init__.py  test_constants.py
tests/prompts/: __init__.py  test_templates.py
tests/templates/: __init__.py  test_shell_completion.py
tests/utils/: __init__.py  test_common.py  test_completion.py  test_cost_optimizer.py  test_exception.py  test_logging.py  test_prompts.py  test_rate_limiter.py  test_retry.py
